default/objects/Col_Co_Mapping__mdt/Col_Co_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Col Co Mapping</label>
    <pluralLabel>Col Co Mapping</pluralLabel>
</CustomObject>