default/objects/Col_Co_Mapping__mdt/fields/ColCoId__c.field-meta.xml
<CustomField>
    <fullName>ColCoId__c</fullName>
    <label>ColCoId</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>