default/objects/Col_Co_Mapping__mdt/fields/Resend_Invoice_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Resend_Invoice_Email_Template__c</fullName>
    <label>Resend Invoice Email Template</label>
    <length>40</length>
    <type>Text</type>
</CustomField>